--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     links:
       - db
       - redis
-#      - es
     ports:
       - "127.0.0.1:3000:3000"
+      - es
     networks:
       - internal_network
       - external_network
@@ -32,15 +32,17 @@ services:
     volumes:
       - ./db:/var/lib/postgresql/data
 
-#  es:
-#    restart: always
-#    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.4.2
-#    environment:
-#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-#    networks:
-#      - internal_network
-#    volumes:
-#      - ./elasticsearch:/usr/share/elasticsearch/data
+  es:
+    restart: always
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.2
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "network.host=0.0.0.0"
+      - "discovery.type=single-node"
+    networks:
+      - internal_network
+    volumes:
+      - ./elasticsearch:/usr/share/elasticsearch/data
 
 networks:
   internal_network:
