--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     networks:
       - internal_network
       - external_network
+    volumes:
+      - ./files:/misskey/files
 
   redis:
     restart: always
